2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/geyes.xml: Fix build.

2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* themes/Makefile.am:
	- remove spurious \ 

2006-09-02  Davyd Madeley  <davyd@madeley.id.au>

	* themes/Tango/config:
	* themes/Tango/tango-eye.png:
	* themes/Tango/tango-pupil.png:
	- added a Tango eye theme

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-07-20  Davyd Madeley  <dabyd@madeley.id.au>

	* docs/*: Remove unwanted files. Need to remove XML files once they've
	  been converted to po files.
	
	* docs/Makefile.am:
	* docs/geyes.omf.in:
	* docs/C/geyes.xml: g-d-u-ise

2005-06-30  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* geyes.c (help_cb): 
	* themes.c (phelp_cb): use GtkMessageDialog instead of 
	g_warning's.

2005-06-26  Davyd Madeley  <davyd@madeley.id.au>

	* geyes.c:
	* geyes.h: Fix about dialog.

2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>

	* geyes.c: (about_cb): Make the dialog resizable.
	Closes bug #170709. Patch from Michael Terry.
	* geyes.h:
	* themes.c: (properties_cb): Clean up some.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* geyes.c: Don't leak style while handling the change_background
	signal.  Fix adapted from Vincent Untz's fixes to various panel
	applets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* themes.c: Make theme dirs static

2005-01-17  Davyd Madeley  <davyd@madeley.id.au>

	* geyes.c: Fix transparency.

2005-01-09 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* geyes.c: Fix bugs #143479 and #130676

2004-09-27  Mark McLoughlin  <mark@skynet.ie>

	* gnome-eyes.png: new icon from Jakub Steiner.

2004-09-12  Shaun McCance  <shaunm@gnome.org>

	* docs/C/geyes-C.omf:
	* docs/C/geyes.xml:
	* docs/C/figures/geyes_applet.png:
	- Updated for 2.8

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec.