@@ -1,3 +1,8 @@
+2006-12-04  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>
+
+	* themes.c: (theme_selected_cb), (properties_cb): Show only the theme
+	names and not complete paths. Fixes bug #381294.
+
 2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* docs/C/geyes.xml: Fix build.
